<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/settings_conf_title">

        <CheckBoxPreference
            android:key="checkbox_preference"
            android:title="@string/settings_checkbox_title"
            android:summary="@string/settings_checkbox_text" />

    </PreferenceCategory>



    <PreferenceCategory
        android:title="@string/settings_credits_title">
        <PreferenceScreen
            android:title="@string/settings_credits_text"
            android:summary="@string/settings_credits_subtext">

            <intent android:action="android.intent.action.VIEW"
                android:data="@string/settings_credits_url" />
        </PreferenceScreen>
</PreferenceCategory>
 </PreferenceScreen>




